# chronoai

./: README.md  benchmark.py  benchmark_externalai.py  benchmark_internalllm.py  chronoai.py  chronoai_gpt.py  external_llm.py  graph_externalllm.py  graph_internalllm.py  internal_llm.py  main.py  pdfparser.py  retrieve_interaction.py  test.py
benchmarks/: CMakeLists.txt  mpiwritebuffer1gb.cpp  read.cpp  sample.cpp  writebuffer1kb.cpp
test/: readbuffer1kb.cpp  write.cpp  writebuffer1gb.cpp  writebuffer1mb.cpp
test_1/: CMakeLists.txt  test (Copy).cpp
